# acme-dental

./: .gitignore  Acme Dental-AI agent.docx  Architectural_decisions.md  README.md  pyproject.toml
backend/: Procfile  README.md  pyproject.toml  railway.toml
backend/src/: agent.py  api.py  cache.py  calendly.py  main.py  webhooks.py
backend/tests/: test_api.py  test_cache.py
frontend/: .env.example
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  QuickActions.css  QuickActions.tsx  TypingIndicator.css  TypingIndicator.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: agent.py  calendly.py  knowledge_base.py  logging_config.py  main.py
tests/: test_agent.py  test_calendly.py
